[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/leveleditor/menus/WorldButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/leveleditor/menus/OpenWorld.gd" type="Script" id=4]

[node name="OpenWorldMenu" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = -15.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 26.0
margin_right = -44.0
margin_bottom = -25.0
custom_constants/separation = 15

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1153.0
margin_bottom = 30.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][wave]Open a World"
text = "Open a World"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 1153.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 1153.0
margin_bottom = 509.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="WorldList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1153.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="WorldButton" parent="VBoxContainer/ScrollContainer/WorldList" instance=ExtResource( 3 )]
margin_right = 1153.0

[node name="OpenWorldButton" type="Button" parent="VBoxContainer"]
margin_top = 524.0
margin_right = 1153.0
margin_bottom = 574.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_bottom = NodePath("../Back")
text = "Open World"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 589.0
margin_right = 1153.0
margin_bottom = 639.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../OpenWorldButton")
text = "Back"

[connection signal="about_to_show" from="." to="." method="_on_OpenWorldMenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OpenWorldMenu_popup_hide"]
[connection signal="pressed" from="VBoxContainer/OpenWorldButton" to="." method="_on_CreateWorldButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
